2012-06-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor.php: Fixed strings of link
	and unlink actions due to bad translation.
	
	Merged from branches.
	
2012-06-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_manager/main.php: Added message when user 
	doesn't have an enterprise update installed on web console.

2012-06-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_agente.php: Added confirmation message
	to improve user feedback.
	
	* operation/agentes/tactical.php: Removed empty links in tactical 
	view.

2012-06-13  Hirofumi Kosaka  <kosaka@rworks.jp>

	* operation/agentes/estado_ultimopaquete.php: Fixed string
	truncation problem for multi-byte characters.

2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added options for progress_bar graph.

2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	 include/functions_agents.php: Fixed problem when modules are 
	 repeated in source and target agents. 
	 
	* operation/events/events_list.php: Delete double confirmation when
	an event is deleted.
	
	Merged from trunk.

2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/console/icons/light_ok.png, images/console/icons/light.png:
	modified the files for to give more coherence.
	
	* images/console/icons/user_warning.png,
	images/console/icons/user_bad.png,
	images/console/icons/user_ok.png: added lost status item for the
	visual map.

2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/console/background/switch_3com.gif: removed unused
	background because it is in gif....and it is so ugly.
	
	* images/console/background/Nortel-3510-24T-800x477.jpg: fixed the
	image, now it is a standar jpg.

2012-06-12  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_servers.php,
	  godmode/servers/modificar_server.php: Added real-time export server
	  stats.
